<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/pink"
        android:gravity="center"
        android:text="@string/createPost"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginForm"/>

    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/loginTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="50dp"
        android:background="@drawable/image_background_list"
        android:gravity="center">

        <EditText
            android:id="@+id/loginOrEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>
        <Button
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_list"
            android:text="@string/enter"
            android:textColor="@color/pink"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>