<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/pink"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/profileImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/post_default_picture"
        android:background="@drawable/image_background_list"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/profileTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/profileInformation"
        android:layout_margin="30dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileInformation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="@id/profileInformationButtons"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage">

        <TextView
            android:id="@+id/nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:gravity="center"
            android:text="@string/postTitle"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/postAuthor"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nickname" />

        <TextView
            android:id="@+id/profileCreated_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="12.12.1970"
            android:textColor="@color/pink"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintRight_toLeftOf="@id/profileUpdated_at"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/profileUpdated_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="12.12.1970"
            android:textColor="@color/pink"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/profileInformationButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/pink"
        app:layout_constraintTop_toBottomOf="@id/profileInformation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/profileInformationUpdateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/refresh"
            android:background="@drawable/image_background_list"/>

        <Button
            android:id="@+id/profileInformationDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_margin="8dp"
            android:background="@drawable/image_background_list"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>